Background needed on IE9/10 for clicks, fix #1402

--- a/src/resources/forms/orbeon/builder/resources/form-builder.less
+++ b/src/resources/forms/orbeon/builder/resources/form-builder.less
@@ -88,6 +88,8 @@ body {
         color: #BBB;                                                        // Light gray denoting hint
         font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;        // Matching font defined by Bootstrap for titles
         z-index: 1;                                                         // Show on top of the page (default is 0)
+        background: white; opacity: 0.01;                                   // For IE9 and IE10, fixing https://github.com/orbeon/orbeon-forms/issues/1402,
+                                                                            // see http://stackoverflow.com/a/6480792/5295
     }
 
     .fb-edit-section-label {                                                // Input created dynamically to edit section label
